syntax = "proto3";

package analytics.v1;

option go_package = "github.com/giia/giia-core-engine/services/analytics-service/api/proto/analytics/v1;analyticsv1";

import "google/protobuf/timestamp.proto";

service AnalyticsService {
  rpc GetKPISnapshot(GetKPISnapshotRequest) returns (GetKPISnapshotResponse);
  rpc ListKPISnapshots(ListKPISnapshotsRequest) returns (ListKPISnapshotsResponse);

  rpc GetDaysInInventoryKPI(GetDaysInInventoryKPIRequest) returns (GetDaysInInventoryKPIResponse);
  rpc ListDaysInInventoryKPI(ListDaysInInventoryKPIRequest) returns (ListDaysInInventoryKPIResponse);

  rpc GetImmobilizedInventoryKPI(GetImmobilizedInventoryKPIRequest) returns (GetImmobilizedInventoryKPIResponse);
  rpc ListImmobilizedInventoryKPI(ListImmobilizedInventoryKPIRequest) returns (ListImmobilizedInventoryKPIResponse);

  rpc GetInventoryRotationKPI(GetInventoryRotationKPIRequest) returns (GetInventoryRotationKPIResponse);
  rpc ListInventoryRotationKPI(ListInventoryRotationKPIRequest) returns (ListInventoryRotationKPIResponse);

  rpc GetBufferAnalytics(GetBufferAnalyticsRequest) returns (GetBufferAnalyticsResponse);
  rpc ListBufferAnalytics(ListBufferAnalyticsRequest) returns (ListBufferAnalyticsResponse);
}

message KPISnapshot {
  string id = 1;
  string organization_id = 2;
  google.protobuf.Timestamp snapshot_date = 3;
  double inventory_turnover = 4;
  double stockout_rate = 5;
  double service_level = 6;
  double excess_inventory_pct = 7;
  double buffer_score_green = 8;
  double buffer_score_yellow = 9;
  double buffer_score_red = 10;
  double total_inventory_value = 11;
  google.protobuf.Timestamp created_at = 12;
}

message DaysInInventoryKPI {
  string id = 1;
  string organization_id = 2;
  google.protobuf.Timestamp snapshot_date = 3;
  double total_valued_days = 4;
  double average_valued_days = 5;
  int32 total_products = 6;
  google.protobuf.Timestamp created_at = 7;
}

message ImmobilizedInventoryKPI {
  string id = 1;
  string organization_id = 2;
  google.protobuf.Timestamp snapshot_date = 3;
  int32 threshold_years = 4;
  int32 immobilized_count = 5;
  double immobilized_value = 6;
  double total_stock_value = 7;
  double immobilized_percentage = 8;
  google.protobuf.Timestamp created_at = 9;
}

message InventoryRotationKPI {
  string id = 1;
  string organization_id = 2;
  google.protobuf.Timestamp snapshot_date = 3;
  double sales_last_30_days = 4;
  double avg_monthly_stock = 5;
  double rotation_ratio = 6;
  repeated RotatingProduct top_rotating_products = 7;
  repeated RotatingProduct slow_rotating_products = 8;
  google.protobuf.Timestamp created_at = 9;
}

message RotatingProduct {
  string product_id = 1;
  string sku = 2;
  string name = 3;
  double sales_30_days = 4;
  double avg_stock_value = 5;
  double rotation_ratio = 6;
}

message BufferAnalytics {
  string id = 1;
  string product_id = 2;
  string organization_id = 3;
  google.protobuf.Timestamp date = 4;
  double cpd = 5;
  double red_zone = 6;
  double red_base = 7;
  double red_safe = 8;
  double yellow_zone = 9;
  double green_zone = 10;
  int32 ltd = 11;
  double lead_time_factor = 12;
  double variability_factor = 13;
  int32 moq = 14;
  int32 order_frequency = 15;
  double optimal_order_freq = 16;
  double safety_days = 17;
  double avg_open_orders = 18;
  bool has_adjustments = 19;
  google.protobuf.Timestamp created_at = 20;
}

message GetKPISnapshotRequest {
  string organization_id = 1;
  google.protobuf.Timestamp snapshot_date = 2;
}

message GetKPISnapshotResponse {
  KPISnapshot kpi_snapshot = 1;
}

message ListKPISnapshotsRequest {
  string organization_id = 1;
  google.protobuf.Timestamp start_date = 2;
  google.protobuf.Timestamp end_date = 3;
}

message ListKPISnapshotsResponse {
  repeated KPISnapshot kpi_snapshots = 1;
}

message GetDaysInInventoryKPIRequest {
  string organization_id = 1;
  google.protobuf.Timestamp snapshot_date = 2;
}

message GetDaysInInventoryKPIResponse {
  DaysInInventoryKPI kpi = 1;
}

message ListDaysInInventoryKPIRequest {
  string organization_id = 1;
  google.protobuf.Timestamp start_date = 2;
  google.protobuf.Timestamp end_date = 3;
}

message ListDaysInInventoryKPIResponse {
  repeated DaysInInventoryKPI kpis = 1;
}

message GetImmobilizedInventoryKPIRequest {
  string organization_id = 1;
  google.protobuf.Timestamp snapshot_date = 2;
  int32 threshold_years = 3;
}

message GetImmobilizedInventoryKPIResponse {
  ImmobilizedInventoryKPI kpi = 1;
}

message ListImmobilizedInventoryKPIRequest {
  string organization_id = 1;
  google.protobuf.Timestamp start_date = 2;
  google.protobuf.Timestamp end_date = 3;
}

message ListImmobilizedInventoryKPIResponse {
  repeated ImmobilizedInventoryKPI kpis = 1;
}

message GetInventoryRotationKPIRequest {
  string organization_id = 1;
  google.protobuf.Timestamp snapshot_date = 2;
}

message GetInventoryRotationKPIResponse {
  InventoryRotationKPI kpi = 1;
}

message ListInventoryRotationKPIRequest {
  string organization_id = 1;
  google.protobuf.Timestamp start_date = 2;
  google.protobuf.Timestamp end_date = 3;
}

message ListInventoryRotationKPIResponse {
  repeated InventoryRotationKPI kpis = 1;
}

message GetBufferAnalyticsRequest {
  string product_id = 1;
  string organization_id = 2;
  google.protobuf.Timestamp date = 3;
}

message GetBufferAnalyticsResponse {
  BufferAnalytics analytics = 1;
}

message ListBufferAnalyticsRequest {
  string organization_id = 1;
  google.protobuf.Timestamp start_date = 2;
  google.protobuf.Timestamp end_date = 3;
}

message ListBufferAnalyticsResponse {
  repeated BufferAnalytics analytics_list = 1;
}
